--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Title -->
     <title>Alhikma Ilm</title>
 
     <!-- Font (Inter) -->
@@ -17,11 +19,11 @@
   <!-- Body -->
   <body>
     <!-- Header -->
-    <header class="py-5">
+    <header>
       <div class="container">
-        <div class="flex items-center justify-between">
+        <div class="flex items-center justify-between h-28">
           <!-- Logo -->
-          <h1 class="font-semibold !text-3xl" translate="no">
+          <h1 class="font-semibold !text-3xl uppercase" translate="no">
             <a href="index.html">Alhikma Ilm</a>
           </h1>
 
@@ -56,7 +58,7 @@
             <!-- Action button -->
             <a
               href="#form"
-              class="bg-brand-dark px-6 py-2.5 text-white rounded-full transition-colors duration-200 hover:bg-black"
+              class="btn-3d bg-brand-dark border-gray-500 hover:bg-black"
             >
               Qabulga yozilish
             </a>
@@ -66,9 +68,56 @@
     </header>
 
     <!-- Hero -->
-    <div class="">
-      <div class="container">
-        <div class="w-full bg-white rounded-2xl py-72"></div>
+    <div class="container">
+      <div class="grid grid-cols-2 gap-5 w-full bg-white rounded-2xl py-8">
+        <!-- Main content -->
+        <div class="flex flex-col justify-center pl-12">
+          <!-- Title -->
+          <h1 class="text-[40px] font-semibold mb-5">
+            Kelajak IT mutaxassislari <br />
+            shu yerdan yo'lga chiqadi!
+            <img
+              width="40"
+              height="40"
+              alt="Raketa ikonka"
+              class="inline-block"
+              src="./src/assets/images/3d-rocket.png"
+            />
+          </h1>
+
+          <!-- Description -->
+          <p class="text-xl mb-7">
+            Dasturlash, texnologiyalar va zamonaviy kasblar bo‘yicha chuqur
+            bilim oling — amaliy darslar, tajribali mentorlar va real loyihalar
+            bilan!
+          </p>
+
+          <!-- Action buttons -->
+          <div class="flex items-center gap-5">
+            <a
+              href="#form"
+              class="btn-3d w-48 bg-brand-primary border-orange-800 hover:bg-orange-500"
+              >Qabulga yozilish</a
+            >
+
+            <a
+              href="#courses"
+              class="btn-3d w-48 bg-brand-secondary border-green-800 hover:bg-green-600"
+              >Barcha kurslar</a
+            >
+          </div>
+        </div>
+
+        <!-- Image -->
+        <div class="flex items-center justify-center size-full">
+          <img
+            width="450"
+            height="450"
+            class="size-[450px]"
+            alt="Alhikma 3d kitob"
+            src="./src/assets/images/3d-book.webp"
+          />
+        </div>
       </div>
     </div>
   </body>
