Add Features section without responsive styles

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Hero -->
     <div class="container">
       <div
-        class="grid grid-cols-2 gap-5 relative overflow-hidden w-full bg-white rounded-2xl py-8"
+        class="grid grid-cols-2 gap-5 relative overflow-hidden w-full bg-white rounded-3xl py-8"
       >
         <!-- Main content -->
         <div class="flex flex-col justify-center pl-12 z-10">
@@ -143,7 +143,7 @@
           <!-- Main content -->
           <div class="grid grid-cols-2 gap-5 mb-5">
             <!-- Content details -->
-            <div class="bg-white p-8 rounded-2xl">
+            <div class="bg-white p-8 rounded-3xl">
               <!-- Subtitle -->
               <div class="font-semibold text-2xl mb-5">
                 <strong class="text-brand-primary font-semibold"
@@ -168,7 +168,7 @@
 
             <!-- Video banner -->
             <div
-              class="group flex items-center justify-center relative bg-white rounded-2xl overflow-hidden"
+              class="group flex items-center justify-center relative bg-white rounded-3xl overflow-hidden"
             >
               <img
                 width="610"
@@ -259,6 +259,109 @@
               </li>
             </ul>
           </div>
+        </div>
+      </section>
+
+      <!-- Features  -->
+      <section class="pb-12">
+        <div class="container">
+          <!-- Title -->
+          <h2 class="text-[40px] font-semibold mb-5">Nima uchun aynan biz?</h2>
+
+          <!-- Main content -->
+          <ol class="grid grid-cols-3 gap-5 mb-5">
+            <!-- 1 -->
+            <li class="bg-white p-8 rounded-3xl">
+              <div class="font-bold text-4xl mb-5">1.</div>
+
+              <!-- Title -->
+              <h3 class="font-semibold text-xl mb-5">
+                Tajribali o'qituvchilar
+              </h3>
+
+              <!-- Description -->
+              <p class="text-[19px]">
+                Har bir o'qituvchimiz o'z sohasining mutaxassisi bo'lib,
+                o'quvchilarga chuqur va tushunarli bilim berishga intiladi.
+              </p>
+            </li>
+
+            <!-- 2 -->
+            <li class="bg-white p-8 rounded-3xl">
+              <div class="font-bold text-4xl mb-5">2.</div>
+
+              <!-- Title -->
+              <h3 class="font-semibold text-xl mb-5">Shaxsiy yondashuv</h3>
+
+              <!-- Description -->
+              <p class="text-[19px]">
+                Biz har bir o'quvchining o'ziga xosligi va qobiliyatini inobatga
+                olgan holda, ularga individual yondashamiz.
+              </p>
+            </li>
+
+            <!-- 3 -->
+            <li class="bg-white p-8 rounded-3xl">
+              <div class="font-bold text-4xl mb-5">3.</div>
+
+              <!-- Title -->
+              <h3 class="font-semibold text-xl mb-5">
+                Amaliy va interaktiv darslar
+              </h3>
+
+              <!-- Description -->
+              <p class="text-[19px]">
+                Nazariyani amaliyot bilan uyg'unlashtirib, o'quvchilarning
+                bilimlarini mustahkamlashga katta e’tibor qaratamiz.
+              </p>
+            </li>
+
+            <!-- 4 -->
+            <li class="bg-white p-8 rounded-3xl">
+              <div class="font-bold text-4xl mb-5">4.</div>
+
+              <!-- Title -->
+              <h3 class="font-semibold text-xl mb-5">Zamonaviy o'quv muhiti</h3>
+
+              <!-- Description -->
+              <p class="text-[19px]">
+                Qulay sinfxonalar, texnologik vositalar va do'stona muhit —
+                samarali ta’lim uchun eng yaxshi sharoitlarni yaratamiz.
+              </p>
+            </li>
+
+            <!-- 5 -->
+            <li class="bg-white p-8 rounded-3xl">
+              <div class="font-bold text-4xl mb-5">5.</div>
+
+              <!-- Title -->
+              <h3 class="font-semibold text-xl mb-5">
+                Iqtidorni rivojlantirish
+              </h3>
+
+              <!-- Description -->
+              <p class="text-[19px]">
+                Tanlovlar, musobaqalar va to'garaklar orqali o'quvchilarning
+                ijodkorligi va liderlik qobiliyatini rivojlantiramiz.
+              </p>
+            </li>
+
+            <!-- 6 -->
+            <li class="bg-white p-8 rounded-3xl">
+              <div class="font-bold text-4xl mb-5">6.</div>
+
+              <!-- Title -->
+              <h3 class="font-semibold text-xl mb-5">
+                Muvaffaqiyatga yo'naltirilgan tizim
+              </h3>
+
+              <!-- Description -->
+              <p class="text-[19px]">
+                Biz faqat bilim emas, balki hayotda muvaffaqiyatga erishish
+                uchun zarur bo'lgan ko'nikmalarni ham o'rgatamiz.
+              </p>
+            </li>
+          </ol>
         </div>
       </section>
     </main>
