Add Order for call section without responsive styles

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <!-- Details -->
                 <div class="space-y-3">
                   <b class="inline-block font-bold text-4xl">10+</b>
-                  <p class="text-xl">Tajribali xodim & mutaxassislar</p>
+                  <p class="text-[19px]">Tajribali xodim & mutaxassislar</p>
                 </div>
               </li>
 
@@ -236,7 +236,7 @@
                 <!-- Details -->
                 <div class="space-y-3">
                   <b class="inline-block font-bold text-4xl">5+</b>
-                  <p class="text-xl">Sizga kerakli bo'lgan kurslar</p>
+                  <p class="text-[19px]">Sizga kerakli bo'lgan kurslar</p>
                 </div>
               </li>
 
@@ -254,7 +254,7 @@
                 <!-- Details -->
                 <div class="space-y-3">
                   <b class="inline-block font-bold text-4xl">30+</b>
-                  <p class="text-xl">Amaliyot uchun jihozlar</p>
+                  <p class="text-[19px]">Amaliyot uchun jihozlar</p>
                 </div>
               </li>
             </ul>
@@ -272,10 +272,10 @@
           <ol class="grid grid-cols-3 gap-5 mb-5">
             <!-- 1 -->
             <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5">1.</div>
+              <div class="font-bold text-4xl mb-5 text-brand-primary">1.</div>
 
               <!-- Title -->
-              <h3 class="font-semibold text-xl mb-5">
+              <h3 class="font-semibold text-2xl mb-5">
                 Tajribali o'qituvchilar
               </h3>
 
@@ -288,10 +288,10 @@
 
             <!-- 2 -->
             <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5">2.</div>
+              <div class="font-bold text-4xl mb-5 text-brand-primary">2.</div>
 
               <!-- Title -->
-              <h3 class="font-semibold text-xl mb-5">Shaxsiy yondashuv</h3>
+              <h3 class="font-semibold text-2xl mb-5">Shaxsiy yondashuv</h3>
 
               <!-- Description -->
               <p class="text-[19px]">
@@ -302,40 +302,42 @@
 
             <!-- 3 -->
             <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5">3.</div>
+              <div class="font-bold text-4xl mb-5 text-brand-primary">3.</div>
 
               <!-- Title -->
-              <h3 class="font-semibold text-xl mb-5">
+              <h3 class="font-semibold text-2xl mb-5">
                 Amaliy va interaktiv darslar
               </h3>
 
               <!-- Description -->
               <p class="text-[19px]">
                 Nazariyani amaliyot bilan uyg'unlashtirib, o'quvchilarning
-                bilimlarini mustahkamlashga katta e’tibor qaratamiz.
+                bilimlarini mustahkamlashga katta e'tibor qaratamiz.
               </p>
             </li>
 
             <!-- 4 -->
             <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5">4.</div>
+              <div class="font-bold text-4xl mb-5 text-brand-primary">4.</div>
 
               <!-- Title -->
-              <h3 class="font-semibold text-xl mb-5">Zamonaviy o'quv muhiti</h3>
+              <h3 class="font-semibold text-2xl mb-5">
+                Zamonaviy o'quv muhiti
+              </h3>
 
               <!-- Description -->
               <p class="text-[19px]">
                 Qulay sinfxonalar, texnologik vositalar va do'stona muhit —
-                samarali ta’lim uchun eng yaxshi sharoitlarni yaratamiz.
+                samarali ta'lim uchun eng yaxshi sharoitlarni yaratamiz.
               </p>
             </li>
 
             <!-- 5 -->
             <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5">5.</div>
+              <div class="font-bold text-4xl mb-5 text-brand-primary">5.</div>
 
               <!-- Title -->
-              <h3 class="font-semibold text-xl mb-5">
+              <h3 class="font-semibold text-2xl mb-5">
                 Iqtidorni rivojlantirish
               </h3>
 
@@ -348,10 +350,10 @@
 
             <!-- 6 -->
             <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5">6.</div>
+              <div class="font-bold text-4xl mb-5 text-brand-primary">6.</div>
 
               <!-- Title -->
-              <h3 class="font-semibold text-xl mb-5">
+              <h3 class="font-semibold text-2xl mb-5">
                 Muvaffaqiyatga yo'naltirilgan tizim
               </h3>
 
@@ -362,6 +364,67 @@
               </p>
             </li>
           </ol>
+        </div>
+      </section>
+
+      <!-- Order for call  -->
+      <section class="pb-12">
+        <div class="container">
+          <div
+            class="relative overflow-hidden bg-brand-dark text-white px-12 py-16 rounded-3xl"
+          >
+            <div class="grid grid-cols-2 gap-5 relative z-10">
+              <!-- Content details -->
+              <div>
+                <h2 class="text-[40px] font-semibold mb-5 text-brand-primary">
+                  Siz bilan bog'lanib, sizni savolingizga javob beramiz
+                </h2>
+
+                <p class="text-[19px]">
+                  Agar sizda savol yoki takliflar mavjud bo'lsa, biz sizni
+                  eshitishga tayyormiz! Siz shunchaki o'zingizni ismingiz va
+                  telefon raqamingizni biz bilan ulashing. So'ngra
+                  operatorlarimiz qisqa vaqtlar ichida siz bilan bog'lanishadi.
+                </p>
+              </div>
+
+              <!-- Form -->
+              <form class="flex flex-col items-center justify-center">
+                <div class="max-w-md space-y-5">
+                  <!-- Name input -->
+                  <input
+                    name="name"
+                    type="text"
+                    id="name-input"
+                    placeholder="Ismingiz"
+                  />
+
+                  <!-- Tel input -->
+                  <input
+                    type="tel"
+                    name="tel"
+                    id="tel-input"
+                    placeholder="+998 __ ___-__-__"
+                  />
+
+                  <!-- Submit button -->
+                  <div class="flex items-end justify-end h-[60px]">
+                    <button class="btn-3d">Yuborish</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+
+            <!-- Pattern -->
+            <img
+              alt=""
+              width="382"
+              height="382"
+              aria-hidden="true"
+              class="absolute right-0 inset-y-0 z-0 h-full"
+              src="./src/assets/images/wave-line-pattern.png"
+            />
+          </div>
         </div>
       </section>
     </main>
