Add Courses section without responsive styles

--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
       <section class="py-12">
         <div class="container">
           <!-- Title -->
-          <h2 class="text-[40px] font-semibold mb-5">Biz haqimizda</h2>
+          <h2 class="inline-block text-[40px] font-semibold mb-5">
+            Biz haqimizda
+          </h2>
 
           <!-- Main content -->
           <div class="grid grid-cols-2 gap-5 mb-5">
@@ -266,7 +268,9 @@
       <section class="pb-12">
         <div class="container">
           <!-- Title -->
-          <h2 class="text-[40px] font-semibold mb-5">Nima uchun aynan biz?</h2>
+          <h2 class="inline-block text-[40px] font-semibold mb-5">
+            Nima uchun aynan biz?
+          </h2>
 
           <!-- Main content -->
           <ol class="grid grid-cols-3 gap-5 mb-5">
@@ -427,6 +431,22 @@
           </div>
         </div>
       </section>
+
+      <!-- Courses  -->
+      <section id="courses" class="pb-12">
+        <div class="container">
+          <!-- Title -->
+          <h2 class="inline-block text-[40px] font-semibold mb-5">
+            Barcha kurslar
+          </h2>
+
+          <!-- Main content -->
+          <ul id="courses-list" class="grid grid-cols-3 gap-5 mb-5"></ul>
+        </div>
+      </section>
     </main>
+
+    <!-- Scripts -->
+    <script type="module" src="./src/scripts/index.js"></script>
   </body>
 </html>
