Add action button to Courses section and refactor Courses data

--- a/index.html
+++ b/index.html
@@ -435,10 +435,17 @@
       <!-- Courses  -->
       <section id="courses" class="pb-12">
         <div class="container">
-          <!-- Title -->
-          <h2 class="inline-block text-[40px] font-semibold mb-5">
-            Barcha kurslar
-          </h2>
+          <div class="flex items-center justify-between mb-5">
+            <!-- Title -->
+            <h2 class="text-[40px] font-semibold">Barcha kurslar</h2>
+
+            <!-- Action button -->
+            <a
+              href="#form"
+              class="btn-3d w-48 bg-brand-primary border-orange-800 hover:bg-orange-500"
+              >Qabulga yozilish</a
+            >
+          </div>
 
           <!-- Main content -->
           <ul id="courses-list" class="grid grid-cols-3 gap-5 mb-5"></ul>
