Add footer section with contact details and action button

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     </main>
 
     <!-- CTA (Form) -->
-    <section id="form" class="pb-12">
+    <section id="form">
       <div class="container">
         <div
           class="relative overflow-hidden bg-brand-dark text-white px-12 py-16 rounded-3xl"
@@ -523,6 +523,43 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="flex items-center justify-between h-28">
+          <!-- Logo -->
+          <h1 class="font-semibold !text-3xl uppercase" translate="no">
+            <a href="index.html">Alhikma Ilm</a>
+          </h1>
+
+          <div class="flex items-center gap-8">
+            <!-- Tel -->
+            <div>
+              <a
+                href="tel:+998742009393"
+                class="font-medium text-lg transition-colors duration-200 hover:text-brand-primary"
+              >
+                +998 (74) 200 93 93
+              </a>
+
+              <p class="text-right text-sm text-brand-dark/70">
+                Du - shan, 9:00 - 18:00
+              </p>
+            </div>
+
+            <!-- Action button -->
+            <a
+              target="_blank"
+              href="https://t.me/alhikmagroup"
+              class="btn-3d w-48 bg-blue-400 border-blue-800 hover:bg-blue-500"
+            >
+              Telegram
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Scripts -->
     <script type="module" src="./src/scripts/index.js"></script>
