Add FAQ section without responsive styles

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     </div>
 
     <main>
-      <!-- About  -->
-      <section class="py-12">
+      <!-- About -->
+      <section id="about" class="py-16">
         <div class="container">
           <!-- Title -->
           <h2 class="inline-block text-[40px] font-semibold mb-5">
@@ -264,8 +264,8 @@
         </div>
       </section>
 
-      <!-- Features  -->
-      <section class="pb-12">
+      <!-- Features -->
+      <section class="pb-16">
         <div class="container">
           <!-- Title -->
           <h2 class="inline-block text-[40px] font-semibold mb-5">
@@ -371,8 +371,8 @@
         </div>
       </section>
 
-      <!-- Order for call  -->
-      <section class="pb-12">
+      <!-- Order for call -->
+      <section class="pb-16">
         <div class="container">
           <div
             class="relative overflow-hidden bg-brand-dark text-white px-12 py-16 rounded-3xl"
@@ -432,8 +432,8 @@
         </div>
       </section>
 
-      <!-- Courses  -->
-      <section id="courses" class="pb-12">
+      <!-- Courses -->
+      <section id="courses" class="pb-16">
         <div class="container">
           <div class="flex items-center justify-between mb-5">
             <!-- Title -->
@@ -449,6 +449,19 @@
 
           <!-- Main content -->
           <ul id="courses-list" class="grid grid-cols-3 gap-5 mb-5"></ul>
+        </div>
+      </section>
+
+      <!-- FAQ -->
+      <section id="faq" class="pb-16">
+        <div class="container !max-w-5xl">
+          <!-- Title -->
+          <h2 class="text-center text-[40px] font-semibold mb-5">
+            Tez tez so'raladigan savollar
+          </h2>
+
+          <!-- Main content -->
+          <div id="faq-container" class="space-y-5"></div>
         </div>
       </section>
     </main>
